<resources>
    <string name="app_name">Aarna</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="login">Login</string>
    <string name="choose_your_type">Choose Your Type</string>
    <string name="enter_your_id">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_new_password">Enter New Password</string>
    <string name="enter_your_new_password_again">Enter New Password Again</string>
    <string name="or">OR</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_code">Enter Code</string>
    <string name="profile">Profile</string>
    <string name="order_list">Order List</string>
    <string name="product_list">Product List</string>
    <string name="about_milk">Product `List`</string>
    <string name="record_list">Record List</string>
    <string name="customer_list">Customer List</string>
    <string name="add_new_product_type">Add New Product Type</string>
    <string name="delivery_man_list">Delivery Man List</string>
    <string name="milk_1_l">Milk 1 L</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="save">Save</string>
    <string name="loading">loading...</string>
    <string name="add_new_product">Add New Product</string>
    <string name="select_product_type">Select Product Type</string>
    <string name="enter_about_product">Enter About Product</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_type">Product Type</string>
    <string name="are_you_sure_you_want_to_delete_this">Are You Sure You Want To Delete This</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_new_delivery_boy">Add New Delivery Boy</string>
    <string name="delivery_boy_image">Delivery Boy Image</string>
    <string name="delivery_boy_name">Delivery Boy Name</string>
    <string name="enter_delivery_boy_name">Enter Delivery Boy Name</string>
    <string name="delivery_boy_number">Delivery Boy Number</string>
    <string name="enter_delivery_boy_number">Enter Delivery Boy Number</string>
    <string name="delivery_boy_email">Delivery Boy Email</string>
    <string name="enter_delivery_boy_email">Enter Delivery Boy Email</string>
    <string name="delivery_boy_password">Delivery Boy Password</string>
    <string name="enter_delivery_boy_password">Enter Delivery Boy Password</string>
    <string name="delivery_boy_address">Delivery Boy Address</string>
    <string name="enter_delivery_boy_address">Enter Delivery Boy Address</string>
    <string name="no_data_found">No Data Found</string>
    <string name="choose_order_type">Choose Order Type</string>
    <string name="single_day_order">Single Day Order</string>
    <string name="multi_day_order">Multi Day Order</string>
    <string name="place_order">Place Order</string>
    <string name="add_order">Add Order</string>
    <string name="select_order_date">Select Order Date</string>
    <string name="change_date">Change Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_number">Customer Number</string>
    <string name="edit_order">Edit Order</string>
    <string name="customer_address">Customer Address :</string>
    <string name="change_delivery_boy">Change Delivery Boy</string>


</resources>