<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNewProductTypeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:id="@+id/rl_header"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="@dimen/dp15"
            android:layout_height="@dimen/dp15"
            android:id="@+id/iv_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp10"
            android:layout_alignParentStart="true"
            android:src="@drawable/back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/add_new_product_type"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header">

        <TextView
            android:id="@+id/tv_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp20"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/dp5"
            android:text="@string/product_image"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/tv_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp150"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_centerHorizontal="true"
            android:id="@+id/cv_product">


            <ImageView
                android:padding="@dimen/dp5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/place_holder"
                android:id="@+id/iv_product"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_product"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp10"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/dp5"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

          <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_product_name"
                android:background="@drawable/round_box_profile_th"
                android:layout_below="@+id/tv_product_name"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15">

              <EditText
                  android:id="@+id/et_product_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/dp5"
                  android:padding="@dimen/dp5"
                  android:backgroundTint="@color/transparent"
                  android:fontFamily="@font/montserrat_regular"
                  android:gravity="start"
                  android:hint="@string/enter_product_name"
                  android:maxLines="1"
                  android:singleLine="true"
                  android:textColor="@color/black"
                  android:minHeight="@dimen/dp30"
                  android:textColorHint="@color/black"
                  android:textSize="14sp" />
          </RelativeLayout>




        <RelativeLayout
            android:id="@+id/rl_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp30"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_alignParentBottom="true"
            android:background="@drawable/round_box_profile"
            android:minHeight="@dimen/dp50">

            <TextView
                android:id="@+id/tv_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>